--- a/index.html
+++ b/index.html
@@ -399,7 +399,8 @@ const fortuneTelling = {
                 <div style="position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);background:rgba(0,0,0,0.95);padding:20px;border-radius:10px;text-align:center;">
                     <p style="color:gold;font-size:1.2em;">💫 詳細を解放 💫</p>
                     <p style="color:white;">この先の重要な情報を見る</p>
-                    <a href="https://buy.stripe.com/test_あなたのURL" class="cta-button" style="margin-top:10px;">
+                    <a href="https://buy.stripe.com/test_aFa7sK5bP99E2pF8BUcV200
+                " class="cta-button" style="margin-top:10px;">
                         今だけ480円
                     </a>
                 </div>
@@ -445,7 +446,7 @@ const fortuneTelling = {
             <div style="filter:blur(3px);padding:20px;position:relative;">
                 <p>カードが示す${name}様の本当の運命は...</p>
                 <div style="position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);background:rgba(0,0,0,0.95);padding:20px;border-radius:10px;">
-                    <a href="https://buy.stripe.com/test_あなたのURL" class="cta-button">
+                    <a href="https://buy.stripe.com/test_aFa7sK5bP99E2pF8BUcV200" class="cta-button">
                         完全解釈を見る
                     </a>
                 </div>
