占い機能とStripe決済を完全実装

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>KichiCompass - あなただけの運命の羅針盤</title>
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XENJ6H8FDN"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXX');
+      gtag('config', 'G-XENJ6H8FDN');
       
       // イベント追跡
       function trackEvent(action, category) {
