--- a/index.html
+++ b/index.html
@@ -2006,14 +2006,14 @@ const PaymentPsychology = {
         },
         {
             level: 2,
-            price: 980,
-            originalPrice: 4980,
-            discount: 80,
-            title: "詳細診断",
-            description: "恋愛・金運の詳細",
-            bait: "さらに40%の真実が...",
-            urgency: "2回目の特別価格",
-            timer: 600 // 10分
+            price: 2980,
+            originalPrice: 9800,
+            discount: 70,
+            title: "VIP月額プラン",
+            description: "全機能使い放題・毎月自動更新",
+            bait: "もう占いで悩むことはありません...",
+            urgency: "究極のサブスクリプション",
+            timer: null
         },
         {
             level: 3,
