--- a/index.html
+++ b/index.html
@@ -2390,8 +2390,8 @@ const PaymentPsychology = {
                     
                     <div class="subscription-pricing">
                         <div class="sub-price">
-                            <span class="sub-amount">月額 ¥980</span>
-                            <span class="sub-note">（初月無料）</span>
+                            <span class="sub-amount">月額 ¥2980</span>
+                            <span class="sub-note">（初月50%OFF ¥1,490）</span>
                         </div>
                         <button class="subscribe-button" onclick="PaymentPsychology.processSubscription()">
                             無料で始める
