占い機能とStripe決済を完全実装

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>【当たる】無料占い KichiCompass | 恋愛・仕事・金運 2024年最新</title>
+    <title>【当たる】無料占い! KichiCompass | 恋愛・仕事・金運 2024年最新</title>
     <meta name="description" content="驚異の的中率98.7%！恋愛、仕事、金運を無料で占う。あなただけの詳細な占い結果を今すぐチェック。初回90%OFF実施中。">
     <meta name="keywords" content="占い,無料占い,恋愛占い,タロット,四柱推命,数秘術,当たる占い,2024年占い">
     <meta property="og:title" content="【当たる】無料占い KichiCompass">
